@@ -15,14 +15,14 @@
 # along with this program. If not, see http://www.gnu.org/licenses 
 # 
 
-# Where to install Together Workflow Editor (default value is C:\Program Files\twe-@VERSION@-@RELEASE@)
+# Where to install @APP_FULL_NAME@ (default value is C:\Program Files\twe-@VERSION@-@RELEASE@)
 inst.dir=C:\Program Files\twe-@VERSION@-@RELEASE@
 
 # Path to local java installation (mandatory - has no default value)
 jdk.dir=C:\Program Files\Java\jdk1.8.0_20
 
-# Startup menu name. (default value - Together Workflow Editor @VERSION@-@RELEASE@)
-startup.menu.name=Together Workflow Editor @VERSION@-@RELEASE@
+# Startup menu name. (default value - @APP_FULL_NAME@ @VERSION@-@RELEASE@)
+startup.menu.name=@APP_FULL_NAME@ @VERSION@-@RELEASE@
 
 # Create start menu entry (on/off)
 create.startup.menu=on
