@@ -1,7 +1,8 @@
 ###### TWE 5.5-1 RELEASED ######
 2017-01-20 Sasa Bojanic <sasaboy@together.at>
    # Build procedure changed to produce twe-src-zip component (consisted of TWE source distribution)
-
+   # Build procedure improved to support branding from GPE project
+   
 2017-01-05 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: 
       * Supported new set of extended attributes for sending signed emails:
